force-app/main/default/objects/AbacusTransferNGQueued__e/AbacusTransferNGQueued__e.object-meta.xml
<CustomObject>
    <label>Abacus Transfer NG Queued</label>
    <pluralLabel>Abacus Transfer NG Queued</pluralLabel>
</CustomObject>