force-app/main/default/objects/AbacusTransferNGQueued__e/fields/AbacusTransferNGId__c.field-meta.xml
<CustomField>
    <fullName>AbacusTransferNGId__c</fullName>
    <label>Abacus Transfer NG Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>