force-app/main/default/objects/AbacusTransferNGQueued__e/fields/IdempotencyKey__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyKey__c</fullName>
    <label>Idempotency Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>