force-app/main/default/objects/AbacusTransferNGQueued__e/fields/InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>InterfaceType__c</fullName>
    <label>Interface Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>